--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".addLaptopActivity">
+        </activity>
+        <activity android:name=".AddProductBase">
+        </activity>
         <activity
                 android:name=".MainActivity"
                 android:label="@string/app_name"
